# faiss_index

./: .gitignore  CMakeLists.txt  testinfo-5.14.txt
include/: Retrieval.h  Timer.h  attr_person.h  binary.h  feature.h  featureSql.h  msg.h  ssd.h  systemUtils.h  threadbuf.h
src/: CMakeLists.txt  IVF.cpp  faissGPU_IVF.cpp  faissGpuIO_IVF.cpp  faissGpu_index.cpp  faissIVFPQ.cpp  faissIVFPQHam.cpp  feature.cpp  main.cpp  test.cpp  test_ivfpg_demo.cpp  tests_imi.cpp
src/SQL/: CMakeLists.txt  featureSql.cpp  testSQL.cpp
src/binary/: CMakeLists.txt  binary.cpp
src/cpu/: CMakeLists.txt  IVF.cpp  faissFlat.cpp  faissIVFPQ.cpp  ioIVFPQ.cpp
src/exprt/: CMakeLists.txt  TestRecall.cpp  TestmAP.cpp
src/gpu/: CMakeLists.txt  GpuIOIVFPQ.cpp  MutiGputIndex.cpp  faissGPU_IVF.cpp  faissGpuIO_IVF.cpp  faissGpu_index.cpp
src/person/: CMakeLists.txt  attr_person.cpp  testPerson.cpp
src/system/: AddIndexServer.cpp  CMakeLists.txt  MutiUDPServer.cpp  MutiUDPServerBinary.cpp  OldSyetem.cpp  Server.cpp  VideoRetrievalSystem.cpp  client.cpp  createdata  createdata.cpp  extractColorType.cpp  mapSystem.cpp  systemTest.cpp  systemUtils  systemUtils.cpp  testRead.cpp  threadbuf.cpp
src/test/: CMakeLists.txt  ChangeBinaryModel.cpp  testRetrieval.cpp  test_feature.cpp  test_feature_car.cpp  test_mem_feature.cpp  test_query.cpp
src/util/: CMakeLists.txt  Retrieval.cpp  faissSystem.cpp  faissSystem.cpp.mod  faissSystemCar.cpp  faissSystemCarIVF.cpp  faissSystemMap.cpp  feature.cpp  mapServer.cpp  server.cpp  sort.cpp  ssd.cpp  test.cpp  test_pic.cpp
